--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-svg": "^16.1.32",
     "web-vitals": "^2.1.4"
   },
