--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-svg": "^16.1.32",
