--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.2.0",
     "he": "^1.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-svg": "^16.1.32",
     "styled-components": "^6.1.6",
