--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.2.0",
     "he": "^1.2.0",
+    "moment": "^2.30.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-audio-visualize": "^1.1.3",
