--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "he": "^1.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-svg": "^16.1.32",
+    "react-tweet": "^3.2.0",
+    "react-tweet-embed": "^2.0.0",
+    "react-twitter-embed": "^4.0.4",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
