--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "react-adsense": "^0.1.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-svg": "^16.1.32",
     "react-tweet": "^3.2.0",
     "react-tweet-embed": "^2.0.0",
     "react-twitter-embed": "^4.0.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
