--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-adsense": "^0.1.0",
+    "react-advertising": "^4.2.11",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-helmet": "^6.1.0",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-responsive": "^9.0.2",
