--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.2.0",
+    "express": "^4.18.3",
     "he": "^1.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
